<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/qb_px_200"
        android:layout_height="@dimen/qb_px_220"
        android:src="@mipmap/ic_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />


    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/qb_px_10"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="#43496a"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />


    <TextView
        android:id="@+id/tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tag"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome" />

    <LinearLayout
        android:id="@+id/tel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/qb_px_30"
        android:layout_marginLeft="@dimen/qb_px_15"
        android:layout_marginTop="@dimen/qb_px_20"
        android:layout_marginRight="@dimen/qb_px_15"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tag">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+86"
            android:textColor="#43496a"
            android:textSize="15sp" />


        <ImageView
            android:layout_width="@dimen/qb_px_2"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/qb_px_5"
            android:layout_marginRight="@dimen/qb_px_5"
            android:background="#d8d8d8" />


        <EditText
            android:id="@+id/etAccount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/input_tel"
            android:inputType="phone"
            android:textColor="#c2c6da"
            android:textColorHint="#c2c6da" />

    </LinearLayout>


    <ImageView
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/qb_px_2"
        android:layout_marginLeft="@dimen/qb_px_15"
        android:layout_marginTop="@dimen/qb_px_10"
        android:layout_marginRight="@dimen/qb_px_15"
        android:background="#d8d8d8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tel" />


    <TextView
        android:id="@+id/introduce"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/qb_px_15"
        android:layout_marginTop="@dimen/qb_px_10"
        android:layout_marginRight="@dimen/qb_px_15"
        android:gravity="center"
        android:text="@string/loginIntroduce"
        android:textColor="#c2c6da"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line" />


    <TextView
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/qb_px_40"
        android:layout_marginLeft="@dimen/qb_px_55"
        android:layout_marginTop="@dimen/qb_px_30"
        android:layout_marginRight="@dimen/qb_px_55"
        android:background="@drawable/shape_login_bg"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/introduce" />


    <TextView
        android:id="@+id/tvZhengce"
        android:layout_width="wrap_content"
        android:text="隐私政策"
        android:gravity="center"
        android:layout_marginTop="@dimen/qb_px_5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        android:layout_height="@dimen/qb_px_40" />

</androidx.constraintlayout.widget.ConstraintLayout>